--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,10 @@
   --safe-right: env(safe-area-inset-right, 0px);
   --safe-bottom: env(safe-area-inset-bottom, 0px);
   --safe-left: env(safe-area-inset-left, 0px);
+  --android-overlay-top: 0px;
+  --android-overlay-right: 0px;
+  --android-overlay-bottom: 0px;
+  --android-inset-breathing: 20px;
   --header-h: clamp(34px, calc(46px * var(--ui-scale)), 46px);
   --shell-gap: clamp(0.35rem, 1.5vw, 0.7rem);
   --side-w: clamp(72px, calc(180px * var(--ui-scale)), 132px);
@@ -83,9 +87,10 @@ html.is-android #root {
 html.is-android .page {
   height: calc(var(--app-vh, 1vh) * 100);
   min-height: calc(var(--app-vh, 1vh) * 100);
-  padding-left: calc(var(--tg-content-left, 0px) + max(8px, var(--safe-left)));
-  padding-right: calc(var(--tg-content-right, 0px) + max(8px, var(--safe-right)));
-  padding-bottom: calc(var(--tg-content-bottom, 0px) + max(8px, env(safe-area-inset-bottom, 0px)));
+  padding-top: calc(var(--tg-content-top, 0px) + var(--safe-top) + var(--android-overlay-top, 0px));
+  padding-right: calc(var(--tg-content-right, 0px) + var(--safe-right) + var(--android-overlay-right, 0px) + var(--android-inset-breathing, 20px));
+  padding-bottom: calc(var(--tg-content-bottom, 0px) + var(--safe-bottom) + var(--android-overlay-bottom, 0px));
+  padding-left: calc(var(--tg-content-left, 0px) + var(--safe-left) + var(--android-inset-breathing, 20px));
 }
 
 .hud {
